--- a/static/index.html
+++ b/static/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Raphael Silva - Personal Website</title>
-  <meta content="This is my personal website, here you can find some information about me, my resume and my blog." name="description">
+  <meta content="This is my personal website, here you can find some information about me, my resume and my CTFs blog. " name="description">
   <meta content="" name="keywords">
 
   <!-- Bootstrap CSS CDN -->
@@ -35,7 +35,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-small.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-small.jpeg" alt="photo of me" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Raphael Silva</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="mailto:raphaelcabidelli20@gmail.com" target="_blank" class="email"><i class='bx bxs-envelope'></i></a>
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/profile.jpeg" class="img-fluid" alt="photo of me">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Information Systems Student &amp; Developer.</h3>
@@ -256,11 +256,11 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="journal-info blog-item">
 
-                    <a href="./blog/blog-single.html" target="_blank"><img src="assets/img/blog/tartarus/bg-small.jpeg" class="img-responsive" alt="img" style="height: 200px;"></a>
+                    <a href="./blog/tartarus/tartarus.html" target="_blank"><img src="assets/img/blog/tartarus/bg-small.jpeg" class="img-responsive" alt="tartarus room image" style="height: 200px;"></a>
 
                     <div class="journal-txt">
 
-                      <h4><a href="./blog/blog-single.html">TryHackMe Room Writeup - Tartarus</a></h4>
+                      <h4><a href="./blog/tartarus/tartarus.html">TryHackMe Room Writeup - Tartarus</a></h4>
                       <p class="separator">A beginner box based on simple enumeration of services and basic privilege escalation techniques.
                       </p>
 
