fix horizontal scroll bug and start tartarus writeup

--- a/static/index.html
+++ b/static/index.html
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a 3rd year Information Systems student at the University of Minho, with a passion for Software Development and
+          <p>I am a 3<sup>rd</sup> year Information Systems student at the University of Minho, with a passion for Software Development and
             Information Security. Experience with some software projects in the scope
             of different university courses and some by personal interests, such as a
             project management software in Java, a WebApp for managing users and
@@ -242,7 +242,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Journal Section ======= -->
-    <section id="blog" class="blog" data-aos="fade-left">
+    <section id="blog" class="blog" data-aos="fade-right">
       <div id="blog" class="text-left paddsection">
 
         <div class="container">
