--- a/static/index.html
+++ b/static/index.html
@@ -160,6 +160,8 @@
                 <li>Git</li>
                 <li>Linux</li>
                 <li>UML</li>
+                <li>Tableau</li>
+                <li>Talend</li>
               </ul>
             </div>
             <h3 class="resume-title">Soft Skills</h3>
@@ -183,12 +185,42 @@
               <p><em>Full Stack Developer | Personal Project </em></p>
               <ul>
                 <li>Creation of a service that offers a solution for restaurants that want to move
-                  past the physical menu and onto a digital one. </li>
+                  past the physical menu and onto a digital one;</li>
                 <li>The solution can also be
-                  expanded to a full website. </li>
-                <li>Lightweight and responsive design.</li>
+                  expanded to a full website;</li>
+                <li>Lightweight and responsive design;</li>
                 <li>Technologies used: HTML/CSS/JavaScript, Bootstrap, Fetch, REST, Node.js,
                   Express, MySQL, Git, DigitalOcean.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4>Personal Website</h4>
+              <h5>06/2020 - Present</h5>
+              <p><em>Full Stack Developer | Personal Project</em></p>
+              <ul>
+                <li>Small Personal Website with an introduction, CV and a security blog;</li>
+                <li>Technologies used: HTML/CSS/JavaScript, Bootstrap , Python (Flask), Git, DigitalOcean.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4>Twatter | Distributed Application using sockets and Java RMI</h4>
+              <h5>09/2020 - 01/2021</h5>
+              <p><em>Java Developer | C.U.: Distributed Systems</em></p>
+              <ul>
+                <li>Simple social network application built using sockets TCP for client-client communication and Java RMI for client-server;</li>
+                <li>Technologies used: Java, Git.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4>TS4GE | Business Intelligence & Data Warehousing Project</h4>
+              <h5>09/2020 - 01/2021</h5>
+              <p><em>BI/DW Developer | C.U.: Technologies for Management Support</em></p>
+              <ul>
+                <li>Data analysis and treatment using Talend Data Quality and Talend Data Integration;</li>
+                <li>Data Warehouse modeling and implementation in MySQL;</li>
+                <li>Creation of interactive dashboards in Tableau;</li>
+                <li>Technologies used: Talend Data Quality, Talend Data Integration, MySQL,
+                  MySQL Workbench, Tableau.</li>
               </ul>
             </div>
             <div class="resume-item pb-0">
@@ -197,10 +229,10 @@
               <p><em>Video Analysis Developer | C.U.: Software Development</em></p>
               <ul>
                 <li>Software Development course project in association with the DGRSP
-                  (Direção-Geral de Reinserção e Serviços Prisionais).</li>
-                <li>Implemented a machine learning algorithm to analyze camera feeds and send an alert to the prison website when people are detected.</li>
-                <li>Facilitating the setup process by the use of docker images to serve the client-side of the application.</li>
-                <li>Use of JHipster for an easier and faster website setup.</li>
+                  (Direção-Geral de Reinserção e Serviços Prisionais);</li>
+                <li>Implemented a machine learning algorithm to analyze camera feeds and send an alert to the prison website when people are detected;</li>
+                <li>Facilitating the setup process by the use of docker images to serve the client-side of the application;</li>
+                <li>Use of JHipster for an easier and faster website setup;</li>
                 <li>Technologies used: Python, OpenCV, Tensorflow, ZeroMQ, Vue.js, Java,
                   JHipster, Grafana, Docker, Kubernetes, Git, Linux.</li>
               </ul>
@@ -210,8 +242,8 @@
               <h5>02/2020 - 06/2020</h5>
               <p><em>Full Stack Developer | C.U.: Web Development</em></p>
               <ul>
-                <li>Course project to learn the basics of web development.</li>
-                <li>Manage users, activities, events, sponsors, spaces and more.</li>
+                <li>Course project to learn the basics of web development;</li>
+                <li>Manage users, activities, events, sponsors, spaces and more;</li>
                 <li>Technologies used: HTML/CSS/JavaScript, Bootstrap, Fetch, REST, Node.js,
                   Express, MySQL, Passport, Git, Heroku.</li>
               </ul>
@@ -221,7 +253,7 @@
               <h5>07/2019</h5>
               <p><em>Personal Project</em></p>
               <ul>
-                <li>Small personal project to learn the basics about servers and networks.</li>
+                <li>Small personal project to learn the basics about servers and networks;</li>
                 <li>Technologies used: FreeNAS OS.</li>
               </ul>
             </div>
@@ -230,8 +262,8 @@
               <h5>02/2019 – 06/2019</h5>
               <p><em>Back-End Developer | C.U.: Programming Paradigms</em></p>
               <ul>
-                <li>First year course project to learn the basics of OOP programming.</li>
-                <li>Manage projects, create tasks, subtasks, add users and more.</li>
+                <li>First year course project to learn the basics of OOP programming;</li>
+                <li>Manage projects, create tasks, subtasks, add users and more;</li>
                 <li>Technologies used: Java, Git.</li>
               </ul>
             </div>
