--- a/static/index.html
+++ b/static/index.html
@@ -6,11 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Raphael Silva - Personal Website</title>
-  <meta content="This is my personal website, here you can find some information about me, my resume and my CTFs blog. " name="description">
+  <meta content="This is my personal website, here you can find some information about me and my resume."
+    name="description">
   <meta content="" name="keywords">
 
   <!-- Bootstrap CSS CDN -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
   <!-- Boxicons CSS CDN -->
   <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -38,8 +40,10 @@
         <img src="assets/img/profile-small.jpeg" alt="photo of me" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Raphael Silva</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="mailto:raphaelcabidelli20@gmail.com" target="_blank" class="email"><i class='bx bxs-envelope'></i></a>
-          <a href="https://www.linkedin.com/in/raphaelcssilva/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="mailto:raphaelcabidelli20@gmail.com" target="_blank" class="email"><i
+              class='bx bxs-envelope'></i></a>
+          <a href="https://www.linkedin.com/in/raphaelcssilva/" target="_blank" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/RaphaelCSSilva" class="github" target="_blank"><i class='bx bxl-github'></i></a>
         </div>
       </div>
@@ -49,7 +53,7 @@
           <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#blog"><i class="bx bxl-blogger"></i> <span>Blog</span></a></li>
+          <!-- <li><a href="#blog"><i class="bx bxl-blogger"></i> <span>Blog</span></a></li> -->
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -74,11 +78,13 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a 3<sup>rd</sup> year Information Systems student at the University of Minho, with a passion for Software Development and
+          <p>I am a 3<sup>rd</sup> year Information Systems student at the University of Minho, with a passion for
+            Software Development and
             Information Security. Experience with some software projects in the scope
             of different university courses and some by personal interests, such as a
             project management software in Java, a WebApp for managing users and
-            activities, a WebApp and Video Analytics System and a digital menu for
+            activities, a WebApp and Video Analytics System, a distributed application in Java using sockets and RMI, a
+            BI/DW project with Talend and Tableau and a digital menu for
             restaurants.</p>
         </div>
 
@@ -94,8 +100,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a href="mailto:raphaelcabidelli20@gmail.com"> raphaelcabidelli20@gmail.com</a></li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a
+                      href="mailto:raphaelcabidelli20@gmail.com"> raphaelcabidelli20@gmail.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (+351) 910 336 021</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Skype:</strong> live:raphaelcabidelli19</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Braga, Portugal</li>
@@ -103,7 +110,9 @@
               </div>
             </div>
             <p>
-              At the moment, I'm focusing on learning more about security topics. I'm studying for my CompTIA Security+ certification that I plan on taking within the next few months, as well as doing some security CTFs through websites such as HackTheBox and TryHackMe.
+              At the moment, I'm focusing on learning more about security topics by personal interests and also doing
+              some security CTFs
+              through websites such as HackTheBox and TryHackMe.
             </p>
           </div>
         </div>
@@ -125,29 +134,44 @@
             <h3 class="resume-title"> Summary</h3>
             <div class="resume-item">
               <h4>Raphael Silva</h4>
-              <p><em>Dedicated and highly motivated college student with some experience in some software projects in the scope
-                of different university courses and some by personal interests, such as a
-                project management software in Java, a WebApp for managing users and
-                activities, a WebApp and Video Analytics System and a digital menu for
-                restaurants.</em></p>
-                <ul>
-                  <li>Braga, Portugal</li>
-                  <li>910 336 021</li>
-                  <li>raphaelcabidelli20@gmail.com</li>
-                </ul>
+              <p><em>Dedicated and highly motivated college student with some experience in some software projects in
+                  the scope
+                  of different university courses and some by personal interests, such as a
+                  project management software in Java, a WebApp for managing users and
+                  activities, a WebApp and Video Analytics System, a distributed application in Java using sockets and
+                  RMI, a
+                  BI/DW project with Talend and Tableau and a digital menu for
+                  restaurants.</em></p>
+              <ul>
+                <li>Braga, Portugal</li>
+                <li>910 336 021</li>
+                <li>raphaelcabidelli20@gmail.com</li>
+              </ul>
             </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Engineering and Management of Information Systems (Integrated Master's) <a href="https://www.uminho.pt/PT/ensino/oferta-educativa/_layouts/15/UMinho.PortalUM.UI/Pages/CatalogoCursoDetail.aspx?itemId=3680&catId=11" target="_blank"><i class='bx bx-link-external'></i></a></h4>
-              <h5>2018 - Present</h5>
+              <h4>Engineering and Management of Information Systems (Master's Degree) <a
+                  href="https://www.uminho.pt/PT/ensino/oferta-educativa/_layouts/15/UMinho.PortalUM.UI/Pages/CatalogoCursoDetail.aspx?itemId=3680&catId=11"
+                  target="_blank"><i class='bx bx-link-external'></i></a></h4>
+              <h5>2021 - 2023</h5>
+              <p><em>University of Minho, Braga</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Engineering and Management of Information Systems (Licentiate Degree) <a
+                  href="https://www.uminho.pt/PT/ensino/oferta-educativa/_layouts/15/UMinho.PortalUM.UI/Pages/CatalogoCursoDetail.aspx?itemId=3680&catId=11"
+                  target="_blank"><i class='bx bx-link-external'></i></a></h4>
+              <h5>2018 - 2021</h5>
               <p><em>University of Minho, Braga</em></p>
               <p>
-                The Integrated Master's in Engineering and Management of Information Systems aims to create professionals in the field of engineering and management of information systems, whose main professional skills should be the combined knowledge of IT and management.
+                The Integrated Master's in Engineering and Management of Information Systems aims to create
+                professionals in the field of engineering and management of information systems, whose main professional
+                skills should be the combined knowledge of IT and management.
               </p>
               <p>
-                The learning outcomes are related to the field of engineering and management of information systems and should show skill in utilizing Information Technology (IT) in benefit of the organizations.
+                The learning outcomes are related to the field of engineering and management of information systems and
+                should show skill in utilizing Information Technology (IT) in benefit of the organizations.
               </p>
-            </div> 
+            </div>
             <h3 class="resume-title">Technical Skills</h3>
             <div class="resume-item pb-0">
               <ul>
@@ -175,14 +199,15 @@
                 <li>Problem Solver</li>
                 <li>Critical Thinking</li>
               </ul>
-            </div>         
+            </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item pb-0">
-              <h4>Cardápio Virtual | cardapiovirtual.pt <a href="https://cardapiovirtual.pt" target="_blank"><i class='bx bx-link-external'></i></a></h4>
+              <h4>Cardápio Virtual | cardapiovirtual.pt <a href="https://cardapiovirtual.pt" target="_blank"><i
+                    class='bx bx-link-external'></i></a></h4>
               <h5>06/2020 - Present</h5>
-              <p><em>Full Stack Developer | Personal Project </em></p>
+              <p><em>Full Stack Developer | Freelancer for Midtones Creative </em></p>
               <ul>
                 <li>Creation of a service that offers a solution for restaurants that want to move
                   past the physical menu and onto a digital one;</li>
@@ -207,7 +232,8 @@
               <h5>09/2020 - 01/2021</h5>
               <p><em>Java Developer | C.U.: Distributed Systems</em></p>
               <ul>
-                <li>Simple social network application built using sockets TCP for client-client communication and Java RMI for client-server;</li>
+                <li>Simple social network application built using sockets TCP for client-client communication and Java
+                  RMI for client-server;</li>
                 <li>Technologies used: Java, Git.</li>
               </ul>
             </div>
@@ -224,21 +250,27 @@
               </ul>
             </div>
             <div class="resume-item pb-0">
-              <h4>PrisionTech | WebApp and Video Analysis System <a href="https://github.com/RaphaelCSSilva/AnaliseVideoDAI" target="_blank"><i class='bx bxl-github' ></i></a></h4>
+              <h4>PrisonTech | WebApp and Video Analysis System <a
+                  href="https://github.com/RaphaelCSSilva/AnaliseVideoDAI" target="_blank"><i
+                    class='bx bxl-github'></i></a></h4>
               <h5>02/2020 - 06/2020</h5>
               <p><em>Video Analysis Developer | C.U.: Software Development</em></p>
               <ul>
                 <li>Software Development course project in association with the DGRSP
                   (Direção-Geral de Reinserção e Serviços Prisionais);</li>
-                <li>Implemented a machine learning algorithm to analyze camera feeds and send an alert to the prison website when people are detected;</li>
-                <li>Facilitating the setup process by the use of docker images to serve the client-side of the application;</li>
+                <li>Implemented a machine learning algorithm to analyze camera feeds and send an alert to the prison
+                  website when people are detected;</li>
+                <li>Facilitating the setup process by the use of docker images to serve the client-side of the
+                  application;</li>
                 <li>Use of JHipster for an easier and faster website setup;</li>
                 <li>Technologies used: Python, OpenCV, Tensorflow, ZeroMQ, Vue.js, Java,
                   JHipster, Grafana, Docker, Kubernetes, Git, Linux.</li>
               </ul>
             </div>
             <div class="resume-item pb-0">
-              <h4>Task4Society | Fictitious yoga company website <a href="https://github.com/RaphaelCSSilva/Task4Society" target="_blank"><i class='bx bxl-github' ></i></a></h4>
+              <h4>Task4Society | Fictitious yoga company website <a
+                  href="https://github.com/RaphaelCSSilva/Task4Society" target="_blank"><i
+                    class='bx bxl-github'></i></a></h4>
               <h5>02/2020 - 06/2020</h5>
               <p><em>Full Stack Developer | C.U.: Web Development</em></p>
               <ul>
@@ -258,7 +290,9 @@
               </ul>
             </div>
             <div class="resume-item pb-0">
-              <h4>HiProject | Project Management Application in Java <a href="https://github.com/RaphaelCSSilva/HiProject" target="_blank"><i class='bx bxl-github' ></i></a></h4>
+              <h4>HiProject | Project Management Application in Java <a
+                  href="https://github.com/RaphaelCSSilva/HiProject" target="_blank"><i class='bx bxl-github'></i></a>
+              </h4>
               <h5>02/2019 – 06/2019</h5>
               <p><em>Back-End Developer | C.U.: Programming Paradigms</em></p>
               <ul>
@@ -274,6 +308,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Journal Section ======= -->
+    <!-- 
     <section id="blog" class="blog" data-aos="fade-right">
       <div id="blog" class="text-left paddsection">
 
@@ -288,32 +323,41 @@
                 <div class="col-lg-4 col-md-6">
                   <div class="journal-info blog-item">
 
-                    <a href="./blog/tartarus/tartarus.html" target="_blank"><img src="assets/img/blog/tartarus/bg-small.jpeg" class="img-responsive" alt="tartarus room image" style="height: 200px;"></a>
+                    <a href="./blog/tartarus/tartarus.html" target="_blank"><img
+                        src="assets/img/blog/tartarus/bg-small.jpeg" class="img-responsive" alt="tartarus room image"
+                        style="height: 200px;"></a>
 
                     <div class="journal-txt">
 
                       <h4><a href="./blog/tartarus/tartarus.html">TryHackMe Room Writeup - Tartarus</a></h4>
-                      <p class="separator">A beginner box based on simple enumeration of services and basic privilege escalation techniques.
+                      <p class="separator">A beginner box based on simple enumeration of services and basic privilege
+                        escalation techniques.
                       </p>
 
                     </div>
 
                   </div>
+                </div>
               </div>
             </div>
           </div>
-        </div> 
-      </div><!-- End Journal Section -->
-    </section>
+        </div>
+    </section> -->
 
   </main><!-- End #main -->
 
   <a href="#" class="back-to-top"><i class='bx bxs-chevron-up'></i></a>
 
   <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
@@ -327,7 +371,7 @@
 
   <!-- Typed JS CDN -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-  
+
   <!-- AOS JS CDN -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
