--- a/static/index.html
+++ b/static/index.html
@@ -78,14 +78,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a 3<sup>rd</sup> year Information Systems student at the University of Minho, with a passion for
-            Software Development and
-            Information Security. Experience with some software projects in the scope
-            of different university courses and some by personal interests, such as a
-            project management software in Java, a WebApp for managing users and
-            activities, a WebApp and Video Analytics System, a distributed application in Java using sockets and RMI, a
-            BI/DW project with Talend and Tableau and a digital menu for
-            restaurants.</p>
+          <p>Highly passionate for the cybersecurity world and all things related to the Information Systems and Technologies area. Experience with performing code reviews in various languages, in a mindset of bug hunting. Love practicing and honing my security skills through personal research and practicing CTFs on HackTheBox and TryHackMe.</p>
         </div>
 
         <div class="row">
@@ -100,7 +93,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a
                       href="mailto:raphaelcabidelli20@gmail.com"> raphaelcabidelli20@gmail.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (+351) 910 336 021</li>
@@ -110,9 +103,7 @@
               </div>
             </div>
             <p>
-              At the moment, I'm focusing on learning more about security topics by personal interests and also doing
-              some security CTFs
-              through websites such as HackTheBox and TryHackMe.
+              Currently studying for my eWPTXv2 cert, with my exam scheduled for a couple of months from now.
             </p>
           </div>
         </div>
@@ -123,101 +114,50 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
-
         <div class="section-title">
           <h2>Resume</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title"> Summary</h3>
-            <div class="resume-item">
-              <h4>Raphael Silva</h4>
-              <p><em>Dedicated and highly motivated college student with some experience in some software projects in
-                  the scope
-                  of different university courses and some by personal interests, such as a
-                  project management software in Java, a WebApp for managing users and
-                  activities, a WebApp and Video Analytics System, a distributed application in Java using sockets and
-                  RMI, a
-                  BI/DW project with Talend and Tableau and a digital menu for
-                  restaurants.</em></p>
-              <ul>
-                <li>Braga, Portugal</li>
-                <li>910 336 021</li>
-                <li>raphaelcabidelli20@gmail.com</li>
-              </ul>
-            </div>
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Engineering and Management of Information Systems (Master's Degree) <a
-                  href="https://www.uminho.pt/PT/ensino/oferta-educativa/_layouts/15/UMinho.PortalUM.UI/Pages/CatalogoCursoDetail.aspx?itemId=3680&catId=11"
-                  target="_blank"><i class='bx bx-link-external'></i></a></h4>
-              <h5>2021 - 2023</h5>
-              <p><em>University of Minho, Braga</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Engineering and Management of Information Systems (Licentiate Degree) <a
-                  href="https://www.uminho.pt/PT/ensino/oferta-educativa/_layouts/15/UMinho.PortalUM.UI/Pages/CatalogoCursoDetail.aspx?itemId=3680&catId=11"
-                  target="_blank"><i class='bx bx-link-external'></i></a></h4>
-              <h5>2018 - 2021</h5>
-              <p><em>University of Minho, Braga</em></p>
-              <p>
-                The Integrated Master's in Engineering and Management of Information Systems aims to create
-                professionals in the field of engineering and management of information systems, whose main professional
-                skills should be the combined knowledge of IT and management.
-              </p>
-              <p>
-                The learning outcomes are related to the field of engineering and management of information systems and
-                should show skill in utilizing Information Technology (IT) in benefit of the organizations.
-              </p>
-            </div>
-            <h3 class="resume-title">Technical Skills</h3>
-            <div class="resume-item pb-0">
-              <ul>
-                <li>Java (Object Oriented)</li>
-                <li>Python</li>
-                <li>Node.js</li>
-                <li>HTML/CSS/Javascript</li>
-                <li>SQL</li>
-                <li>Docker</li>
-                <li>Git</li>
-                <li>Linux</li>
-                <li>UML</li>
-                <li>Tableau</li>
-                <li>Talend</li>
-              </ul>
-            </div>
-            <h3 class="resume-title">Soft Skills</h3>
-            <div class="resume-item pb-0">
-              <ul>
-                <li>Motivated</li>
-                <li>Hard Worker</li>
-                <li>Team Worker</li>
-                <li>Passionate for Learning</li>
-                <li>Independent</li>
-                <li>Problem Solver</li>
-                <li>Critical Thinking</li>
-              </ul>
-            </div>
-          </div>
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item pb-0">
+              <h4>Application Security Analyst | Checkmarx <a href="https://checkmarx.com" target="_blank"><i
+                    class='bx bx-link-external'></i></a></h4>
+              <h5>06/2021 - Present</h5>
+              <ul>
+                <li>Source code analysis to identify vulnerabilities;</li>
+                <li>Evaluate findings from application security tools;</li>
+                <li>Identify, research, and exploit found vulnerabilities;</li>
+                <li>Support developers to understand vulnerabilities and their mitigations;</li>
+                <li>Develop internal tools for analysis purposes;</li>
+                <li>Technologies used: Various programming languages (Java, JavaScript, Python, etc.), SQL, Docker, Git, Security tools, SAST.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4>Treina-me | treina-me.pt <a href="https://treina-me.pt" target="_blank"><i
+                    class='bx bx-link-external'></i></a></h4>
+              <h5>04/2021 - 06/2021</h5>
+              <p><em>Full Stack Developer | Freelancer for Midtones Creative </em></p>
+              <ul>
+                <li>Development of the back-end for the webapp;</li>
+                <li>Functionality included: register/login, create events and schedule them, zoom API integration for scheduling training sessions, database access, among others;</li>
+                <li>Technologies used: Node.js, MySQL, Git, HTML/CSS/JavaScript, Vue.js.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
               <h4>Cardápio Virtual | cardapiovirtual.pt <a href="https://cardapiovirtual.pt" target="_blank"><i
                     class='bx bx-link-external'></i></a></h4>
-              <h5>06/2020 - Present</h5>
+              <h5>06/2020 - 05/2021</h5>
               <p><em>Full Stack Developer | Freelancer for Midtones Creative </em></p>
               <ul>
                 <li>Creation of a service that offers a solution for restaurants that want to move
                   past the physical menu and onto a digital one;</li>
-                <li>The solution can also be
-                  expanded to a full website;</li>
                 <li>Lightweight and responsive design;</li>
                 <li>Technologies used: HTML/CSS/JavaScript, Bootstrap, Fetch, REST, Node.js,
                   Express, MySQL, Git, DigitalOcean.</li>
               </ul>
             </div>
+            <h3 class="resume-title">Most Relevant Academic/Personal Projects</h3>
             <div class="resume-item pb-0">
               <h4>Personal Website</h4>
               <h5>06/2020 - Present</h5>
@@ -237,7 +177,7 @@
                 <li>Technologies used: Java, Git.</li>
               </ul>
             </div>
-            <div class="resume-item pb-0">
+            <!-- <div class="resume-item pb-0">
               <h4>TS4GE | Business Intelligence & Data Warehousing Project</h4>
               <h5>09/2020 - 01/2021</h5>
               <p><em>BI/DW Developer | C.U.: Technologies for Management Support</em></p>
@@ -248,7 +188,7 @@
                 <li>Technologies used: Talend Data Quality, Talend Data Integration, MySQL,
                   MySQL Workbench, Tableau.</li>
               </ul>
-            </div>
+            </div> -->
             <div class="resume-item pb-0">
               <h4>PrisonTech | WebApp and Video Analysis System <a
                   href="https://github.com/RaphaelCSSilva/AnaliseVideoDAI" target="_blank"><i
@@ -267,7 +207,7 @@
                   JHipster, Grafana, Docker, Kubernetes, Git, Linux.</li>
               </ul>
             </div>
-            <div class="resume-item pb-0">
+<!--             <div class="resume-item pb-0">
               <h4>Task4Society | Fictitious yoga company website <a
                   href="https://github.com/RaphaelCSSilva/Task4Society" target="_blank"><i
                     class='bx bxl-github'></i></a></h4>
@@ -279,8 +219,8 @@
                 <li>Technologies used: HTML/CSS/JavaScript, Bootstrap, Fetch, REST, Node.js,
                   Express, MySQL, Passport, Git, Heroku.</li>
               </ul>
-            </div>
-            <div class="resume-item pb-0">
+            </div> -->
+            <!-- <div class="resume-item pb-0">
               <h4>FreeNAS | Home Server</h4>
               <h5>07/2019</h5>
               <p><em>Personal Project</em></p>
@@ -288,21 +228,76 @@
                 <li>Small personal project to learn the basics about servers and networks;</li>
                 <li>Technologies used: FreeNAS OS.</li>
               </ul>
-            </div>
-            <div class="resume-item pb-0">
-              <h4>HiProject | Project Management Application in Java <a
-                  href="https://github.com/RaphaelCSSilva/HiProject" target="_blank"><i class='bx bxl-github'></i></a>
-              </h4>
-              <h5>02/2019 – 06/2019</h5>
-              <p><em>Back-End Developer | C.U.: Programming Paradigms</em></p>
+            </div> -->
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <!-- <h3 class="resume-title"> Summary</h3>
+            <div class="resume-item">
+              <h4>Raphael Silva</h4>
+              <p><em>Dedicated and highly motivated college student with some experience in some software projects in
+                  the scope
+                  of different university courses and some by personal interests, such as a
+                  project management software in Java, a WebApp for managing users and
+                  activities, a WebApp and Video Analytics System, a distributed application in Java using sockets and
+                  RMI, a
+                  BI/DW project with Talend and Tableau and a digital menu for
+                  restaurants.</em></p>
               <ul>
-                <li>First year course project to learn the basics of OOP programming;</li>
-                <li>Manage projects, create tasks, subtasks, add users and more;</li>
-                <li>Technologies used: Java, Git.</li>
+                <li>Braga, Portugal</li>
+                <li>910 336 021</li>
+                <li>raphaelcabidelli20@gmail.com</li>
+              </ul>
+            </div> -->
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>BSc in Engineering and Management of Information Systems <a
+                  href="https://www.uminho.pt/PT/ensino/oferta-educativa/_layouts/15/UMinho.PortalUM.UI/Pages/CatalogoCursoDetail.aspx?itemId=3680&catId=11"
+                  target="_blank"><i class='bx bx-link-external'></i></a></h4>
+              <h5>2018 - 2021</h5>
+              <p><em>University of Minho, Braga</em></p>
+              <!-- <p>
+                The Integrated Master's in Engineering and Management of Information Systems aims to create
+                professionals in the field of engineering and management of information systems, whose main professional
+                skills should be the combined knowledge of IT and management.
+              </p>
+              <p>
+                The learning outcomes are related to the field of engineering and management of information systems and
+                should show skill in utilizing Information Technology (IT) in benefit of the organizations.
+              </p> -->
+            </div>
+            <h3 class="resume-title">Technical Skills</h3>
+            <div class="resume-item pb-0">
+              <ul>
+                <li>Java</li>
+                <li>Code Review</li>
+                <li>HTML/CSS/Javascript</li>
+                <li>Python</li>
+                <li>Node.js</li>
+                <li>Burp Suite</li>
+                <li>Security Tools (Nmap, Metasploit, etc.)</li>
+                <li>SQL</li>
+                <li>OWASP</li>
+                <li>Docker</li>
+                <li>Git</li>
+                <li>Linux</li>
+                <li>SAST</li>
+              </ul>
+            </div>
+            <h3 class="resume-title">Soft Skills</h3>
+            <div class="resume-item pb-0">
+              <ul>
+                <li>Motivated</li>
+                <li>Hard Worker</li>
+                <li>Team Worker</li>
+                <li>Passionate for Learning</li>
+                <li>Independent</li>
+                <li>Problem Solver</li>
+                <li>Critical Thinking</li>
               </ul>
             </div>
           </div>
         </div>
+      </div>
 
       </div>
     </section><!-- End Resume Section -->
