--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Raphael Silva</h1>
-      <p><span class="typed" data-typed-items="Student, Security Enthusiast, Developer"></span></p>
+      <p><span class="typed" data-typed-items="AppSec, Security Enthusiast, Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -103,7 +103,7 @@
               </div>
             </div>
             <p>
-              Currently studying for my eWPTXv2 cert, with my exam scheduled for a couple of months from now.
+                <!-- -->
             </p>
           </div>
         </div>
@@ -293,6 +293,18 @@
                 <li>Independent</li>
                 <li>Problem Solver</li>
                 <li>Critical Thinking</li>
+              </ul>
+            </div>
+            <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item pb-0">
+              <ul>
+                <li>eWPTXv2 - Certification ID: 1934893</li>
+              </ul>
+            </div>
+            <h3 class="resume-title">CVEs</h3>
+            <div class="resume-item pb-0">
+              <ul>
+                <li>CVE-2022-32074 - Stored XSS (SVG) in OSTicket</li>
               </ul>
             </div>
           </div>
