--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-small.jpeg" alt="photo of me" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-small.jpg" alt="photo of me" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Raphael Silva</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="mailto:raphaelcabidelli20@gmail.com" target="_blank" class="email"><i
